# EmployeeAPI

app/: commands.txt  extensions.py  pyproject.toml  pyproject.toml.txt
app/src/api/dtos/: employee_dto.py
app/src/application/services/: employee_service.py
app/src/application/services/interfaces/: employee_service_interface.py
app/src/domain/entities/: employee.py
app/src/infrastructure/: database.py
app/src/infrastructure/mappers/: employee_mapper.py
app/src/infrastructure/repositories/: employee_repository.py
app/src/infrastructure/repositories/interfaces/: base_repository.py  employee_repository_interface.py
app/src/models/: employee_model.py  role_model.py  task_model.py  user_model.py
app/src/repositories/: base_repository.py  user_repository.py
