[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-project"
version = "0.1.0"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "click==8.3.3",
    "colorama==0.4.6",
    "fastapi==0.136.1",
    "h11==0.16.0",
    "idna==3.13",
    "pydantic==2.13.3",
    "pydantic_core==2.46.3",
    "starlette==1.0.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "uvicorn==0.46.0"
]

[tool.setuptools.packages.find]
where = ["."]  # Looking from the root is usually safer for app1.main style

[project.scripts]
run-my-app = "app.main:run"

[project.optional-dependencies]
# Optional requirements for specific tasks (e.g., testing)
test = [
    "pytest",
    "coverage"
]
